# documentation

./: .gitattributes  .gitignore  .prettierignore  00-q-docs--START-HERE.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  LICENSE-DOCS  Loop String Hadron.ipynb  NOTICE  README.md  Untitled.ipynb  Untitled1.ipynb  adding-courses.md  cSpell.json  check  checkPatternsIndex.ts  crowdin.yml  files_with_long_lines.csv  find_long_comments.py  find_long_comments_mdx.py  fix  fix_long_comments.py  fix_long_comments_mdx.py  generate-toc.py  generate_toc.py  hello-world.ipynb  index.html  jest.config.js  long_comments_mdx_report.json  long_comments_report.json  mdx-guide.md  operator_backpropagation.ipynb  package-lock.json  package.json  page_content.py  proposal1.md  proposal2.md  proposal3.md  (+12 more)
.github/: dependabot.yml
ImageMagick-7.1.1-47/: ImageMagick.spec  ImageMagick.spec.in  Makefile  common.shi  config.status  configure  libtool  magick.sh
Untitled Folder/: real-time-benchmarking-for-qubit-selection.ipynb
analyze/: visualizing-results.ipynb
binder/: fix-notebooks.py  postBuild  requirements.txt
cspell/: cSpell.json
docs/: accessibility.mdx  faq.mdx  images  logging.mdx  placeholder.md  responsible-quantum-computing.mdx  ruff.toml  support.mdx
learning/: images  index.mdx
learning-zh/: README.md  context.md  course-map  course-map.md  glossary.md
main/: 404.html  index.html  index.txt  last_modified.txt
pages/: CNAME  index.html
pr-1113/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1621/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1665/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1683/: index.html
pr-1688/: index.html
pr-1689/: index.html
pr-1690/: index.html
pr-1691/: index.html
pr-1714/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1717/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1723/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1734/: 404.html  faq.html  faq.txt  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1737/: 404.html  faq.html  faq.txt  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1738/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1751/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1752/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1753/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1754/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
pr-1755/: 404.html  index.html  index.txt  responsible-quantum-computing.html  responsible-quantum-computing.txt  support.html  support.txt
scripts/ibm-quantum-learning-uploader/: README.md  pyproject.toml
scripts/ibm-quantum-learning-uploader/src/learning_uploader/: __init__.py  upload.py
scripts/ibm-quantum-learning-uploader/test/: assert-string-on-page.py  e2e-test.sh  learning-api.conf.yaml  learning-platform.conf.yaml  template.ipynb
scripts/image-output-extractor/: __init__.py  pyproject.toml
scripts/image-output-extractor/qiskit_docs_notebook_image_extractor/: __init__.py
scripts/image-output-extractor/test/: test_extract_images.py
scripts/image-tester/: pyproject.toml
scripts/image-tester/sphinx_alt_text_validator/: __init__.py  verify_images.py
scripts/image-tester/src/sphinx_alt_text_validator/: __init__.py  verify_images.py
scripts/image-tester/test/: test_validate_image.py
scripts/iql-lesson-sync/: README.md  pyproject.toml
scripts/iql-lesson-sync/src/iql_lesson_sync/: __init__.py  upload.py
scripts/iql-lesson-sync/src/iql_lesson_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/iql-lesson-sync/src/iql_notebook_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/nb-tester/: README.md  hardware-not-test-eagle  notebooks.toml  pyproject.toml  requirements.txt  test-notebook.py
scripts/nb-tester/patches/: qiskit-ibm-runtime-open
scripts/nb-tester/qiskit_docs_notebook_tester/: __init__.py  config.py  execute.py  post_process.py
scripts/nb-tester/qiskit_docs_notebook_tester/patches/: qiskit-fake-provider  qiskit-ibm-runtime  qiskit-ibm-runtime-inline  qiskit-ibm-runtime-open  runtime-fake-provider
scripts/nb-tester/test/: test_backend_replacements.py  test_get_notebook_jobs.py  test_get_package_versions.py  test_notebook_classification.py
scripts/notebook-normalizer/: pyproject.toml
scripts/notebook-normalizer/qiskit_docs_notebook_normalizer/: __init__.py  cell_output_data.py
scripts/notebook-normalizer/test/: test_normalization.py
scripts/rust/md-extract-links/: .gitattributes  .yarnrc.yml  Cargo.toml  index.d.ts  index.js  package.json
scripts/rust/md-extract-links/.yarn/releases/: yarn-4.12.0.cjs
scripts/rust/md-extract-links/src/: lib.rs
scripts/tool_runner/: __init__.py  pyproject.toml
scripts/tool_runner/qiskit_docs_contributor_tools/: __init__.py  setup.py  test_setup.py
scripts/tool_runner/qiskit_docs_contributor_tools/setup/: check_output.py  installation_instructions.py  test_check_output.py  test_installation_instructions.py
(+268762 files in other folders)
