[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm-quantum-learning-uploader"
version = "0.0.1"
authors = [
  { name="Qiskit Development Team", email="hello@qiskit.org" },
]
description = "Tool for IBM Quantum Learning content creators to upload lessons through the API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml",
  "requests~=2.28"
]

[project.urls]
"Homepage" = "https://github.com/Qiskit/documentation/tree/main/scripts/ibm-quantum-learning-uploader"
"Bug Tracker" = "https://github.com/Qiskit/documentation/issues"

[project.scripts]
sync-lessons = "learning_uploader:sync_lessons"
