[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "sphinx-alt-text-validator"
version = "0.0.1"
description = "This is a tool that helps improving the accessibility of a project that uses Sphinx to build their documentation by detecting images without alt text defined"
requires-python = ">=3.8"
license = "Apache-2.0"
dependencies = []

[[project.authors]]
name = "Qiskit docs team"

[project.scripts]
sphinx-alt-text-validator = "sphinx-alt-text-validator:main"
