[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-alt-text-validator"
version = "0.0.1"
authors = [
  { name="Qiskit docs team" },
]
description = "This is a tool that helps improving the accessibility of a project that uses Sphinx to build their documentation by detecting images without alt text defined"
requires-python = ">=3.8"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
sphinx-alt-text-validator = "sphinx_alt_text_validator:main"
