[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qiskit-docs-notebook-normalizer"
version = "0.0.1"
authors = [
  { name="Qiskit docs team" },
]
description = "A tool to extract image outputs from notebooks and convert to AVIF if needed (requires ImageMagick)."
requires-python = ">=3.8"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "nbformat~=5.10.4",
]

[project.scripts]
qiskit-docs-notebook-normalizer = "qiskit_docs_notebook_normalizer:main"
