[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qiskit_docs_contributor_tools"
version = "0.0.1"
authors = [
  { name="Qiskit docs team" },
]
description = "Tools for contributors to Qiskit/documentation"
requires-python = ">=3.8"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []
