
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "md_extract_links"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
markdown = "1.0.0"
napi = "3.0.0"
napi-derive = "3.0.0"
regex = "1.12.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
